// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots PostsSummaryTable should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kAzzGY djTmlN"
    >
      <header
        className="sc-chPdSV jjZuEt"
      >
        <h2
          className="sc-kgoBCf dgCWVb"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Tweet 
            summary
          </span>
        </h2>
      </header>
      <div
        className="sc-kEYyzF lgfOWu"
        id="js-dom-to-png-posts-summary"
      >
        <div
          className="sc-bdVaJa fWzNTu"
        >
          <div
            className="sc-bwzfXH iNQYMr"
          >
            <div
              className="sc-htpNat lmFxxx"
            />
            <h1
              className="sc-bxivhb hlZJQM"
            >
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                There are no analytics for this date range
              </span>
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots PostsSummaryTable should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kAzzGY djTmlN"
    >
      <header
        className="sc-chPdSV jjZuEt"
      >
        <h2
          className="sc-kgoBCf dgCWVb"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Post 
            summary
          </span>
        </h2>
      </header>
      <div
        className="sc-kEYyzF lgfOWu"
        id="js-dom-to-png-posts-summary"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(255,255,255,.95)",
              "border": "none",
              "display": "flex",
              "justifyContent": "center",
              "maxHeight": "none",
              "minHeight": "8rem",
              "textAlign": "center",
              "transition": "opacity 350ms ease-in-out",
              "zIndex": 2,
            }
          }
        >
          <div
            style={
              Object {
                "background": "none",
                "borderRadius": "2px",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots PostsSummaryTable should render the posts summary table 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kAzzGY djTmlN"
    >
      <header
        className="sc-chPdSV jjZuEt"
      >
        <h2
          className="sc-kgoBCf dgCWVb"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Post 
            summary
          </span>
        </h2>
      </header>
      <div
        className="sc-kEYyzF lgfOWu"
        id="js-dom-to-png-posts-summary"
      >
        <ul
          className="sc-hMqMXs izTvPq"
        >
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Posts
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    20
                  </span>
                </span>
                <div
                  className="sc-EHOje faGiPL"
                >
                  <div
                    className="sc-bZQynM hNHnok"
                  >
                    <div
                      className="sc-ifAKCX imANia"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-gzVnrw fXIzxI"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        5
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Post Impressions
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    901
                  </span>
                </span>
                <div
                  className="sc-EHOje faGiPL"
                >
                  <div
                    className="sc-bZQynM hNHnok"
                  >
                    <div
                      className="sc-ifAKCX imANia"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-gzVnrw fXIzxI"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Post Reach
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,010
                  </span>
                </span>
                <div
                  className="sc-EHOje faGiPL"
                >
                  <div
                    className="sc-bZQynM hNHnok"
                  >
                    <div
                      className="sc-ifAKCX imANia"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-gzVnrw fXIzxI"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Reactions
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    568
                  </span>
                </span>
                <div
                  className="sc-EHOje faGiPL"
                >
                  <div
                    className="sc-bZQynM hNHnok"
                  >
                    <div
                      className="sc-ifAKCX imANia"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-gzVnrw fXIzxI"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        26
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Comments
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            className="sc-dnqmqq eGaKMX"
            width="33.33%"
          >
            <div
              className="sc-iwsKbI btmaIR"
            >
              <span
                className="sc-htoDjs rBkkQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Shares
                  </span>
                </span>
              </span>
              <div
                className="sc-gZMcBi jCgfWF"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    12
                  </span>
                </span>
                <div
                  className="sc-EHOje faGiPL"
                >
                  <div
                    className="sc-bZQynM hNHnok"
                  >
                    <div
                      className="sc-ifAKCX imANia"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-gzVnrw fXIzxI"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        1
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;
